...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:singleLine="true"
            android:hint="Search for an artist..."
            android:text="" />
...
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:indicatorSize="20dp"
            android:indeterminate="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/search_clearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
...
